[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/Enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Enemies/BossEnemyWing.png" type="Texture" id=2]
[ext_resource path="res://assets/Enemies/BossEnemyBody.png" type="Texture" id=3]
[ext_resource path="res://assets/Enemies/BossEnemyLeg2.png" type="Texture" id=4]
[ext_resource path="res://assets/Enemies/BossEnemyHead.png" type="Texture" id=5]
[ext_resource path="res://assets/Enemies/BossEnemyLeg1.png" type="Texture" id=6]
[ext_resource path="res://assets/Enemies/BossEnemyLeg3.png" type="Texture" id=7]
[ext_resource path="res://src/Enemies/BossEnemy.gd" type="Script" id=8]

[sub_resource type="Animation" id=2]
resource_name = "Fly"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/LeftWingSprite:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 45.0, -75.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/RightWingSprite:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -45.0, 75.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 0, -2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/HeadSprite:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -7.5 ), Vector2( 0, -9 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite/LeftUpperLeg/MiddleSegment/EndSegment:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -6, 10 ), Vector2( -6, 10 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite/LeftUpperLeg/MiddleSegment/EndSegment:rotation_degrees")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 5.50893, -7.03561 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite/LeftUpperLeg/MiddleSegment:position")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -12, 3 ), Vector2( -12, 3 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprite/LeftUpperLeg/MiddleSegment:rotation_degrees")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 3.38523, -8.24631 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Sprite/LeftUpperLeg:position")
tracks/8/interp = 2
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -12, -12 ), Vector2( -12, -12 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Sprite/LeftUpperLeg:rotation_degrees")
tracks/9/interp = 2
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -8.89415, 15.2813 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Sprite/RightUpperLeg/MiddleSegment/EndSegment:position")
tracks/10/interp = 2
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 6, 10 ), Vector2( 6, 10 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Sprite/RightUpperLeg/MiddleSegment/EndSegment:rotation_degrees")
tracks/11/interp = 2
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -1.31383, -3.73574 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Sprite/RightUpperLeg/MiddleSegment:position")
tracks/12/interp = 2
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 12, 3 ), Vector2( 12.024, 3.0112 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Sprite/RightUpperLeg/MiddleSegment:rotation_degrees")
tracks/13/interp = 2
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -40.1053, 7.94086 ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Sprite/RightUpperLeg:position")
tracks/14/interp = 2
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 12, -12 ), Vector2( 12, -12 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Sprite/RightUpperLeg:rotation_degrees")
tracks/15/interp = 2
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 21.8014, -15.3052 ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("Sprite/LeftLowerLeg/MiddleSegment/EndSegment:position")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -6, 10 ), Vector2( -6, 10 ) ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("Sprite/LeftLowerLeg/MiddleSegment/EndSegment:rotation_degrees")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 36.6593 ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("Sprite/LeftLowerLeg/MiddleSegment:position")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -12, 3 ), Vector2( -12, 3 ) ]
}
tracks/19/type = "value"
tracks/19/path = NodePath("Sprite/LeftLowerLeg/MiddleSegment:rotation_degrees")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 13.6806, -63.0511 ]
}
tracks/20/type = "value"
tracks/20/path = NodePath("Sprite/LeftLowerLeg:position")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -9, 0 ), Vector2( -9, 0 ) ]
}
tracks/21/type = "value"
tracks/21/path = NodePath("Sprite/LeftLowerLeg:rotation_degrees")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -25.6394, 14.433 ]
}
tracks/22/type = "value"
tracks/22/path = NodePath("Sprite/RightLowerLeg/MiddleSegment/EndSegment:position")
tracks/22/interp = 1
tracks/22/loop_wrap = true
tracks/22/imported = false
tracks/22/enabled = true
tracks/22/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 6, 10 ), Vector2( 6, 10 ) ]
}
tracks/23/type = "value"
tracks/23/path = NodePath("Sprite/RightLowerLeg/MiddleSegment/EndSegment:rotation_degrees")
tracks/23/interp = 1
tracks/23/loop_wrap = true
tracks/23/imported = false
tracks/23/enabled = true
tracks/23/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -33.0132 ]
}
tracks/24/type = "value"
tracks/24/path = NodePath("Sprite/RightLowerLeg/MiddleSegment:position")
tracks/24/interp = 2
tracks/24/loop_wrap = true
tracks/24/imported = false
tracks/24/enabled = true
tracks/24/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 12.0266, 3.01448 ), Vector2( 12.0266, 3.01448 ) ]
}
tracks/25/type = "value"
tracks/25/path = NodePath("Sprite/RightLowerLeg/MiddleSegment:rotation_degrees")
tracks/25/interp = 2
tracks/25/loop_wrap = true
tracks/25/imported = false
tracks/25/enabled = true
tracks/25/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -10.7002, 67.2479 ]
}
tracks/26/type = "value"
tracks/26/path = NodePath("Sprite/RightLowerLeg:position")
tracks/26/interp = 2
tracks/26/loop_wrap = true
tracks/26/imported = false
tracks/26/enabled = true
tracks/26/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 9, 0 ), Vector2( 9, 0 ) ]
}
tracks/27/type = "value"
tracks/27/path = NodePath("Sprite/RightLowerLeg:rotation_degrees")
tracks/27/interp = 2
tracks/27/loop_wrap = true
tracks/27/imported = false
tracks/27/enabled = true
tracks/27/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 20.4146, -19.317 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Fly"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/LeftWingSprite:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 45.0, -75.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/RightWingSprite:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -45.0, 75.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 0, -2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/HeadSprite:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -7.5 ), Vector2( 0, -9 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite/LeftUpperLeg/MiddleSegment/EndSegment:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -6, 10 ), Vector2( -6, 10 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite/LeftUpperLeg/MiddleSegment/EndSegment:rotation_degrees")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 5.50893, -7.03561 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite/LeftUpperLeg/MiddleSegment:position")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -12, 3 ), Vector2( -12, 3 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprite/LeftUpperLeg/MiddleSegment:rotation_degrees")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 3.38523, -8.24631 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Sprite/LeftUpperLeg:position")
tracks/8/interp = 2
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -12, -12 ), Vector2( -12, -12 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Sprite/LeftUpperLeg:rotation_degrees")
tracks/9/interp = 2
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -8.89415, 15.2813 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Sprite/RightUpperLeg/MiddleSegment/EndSegment:position")
tracks/10/interp = 2
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 6, 10 ), Vector2( 6, 10 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Sprite/RightUpperLeg/MiddleSegment/EndSegment:rotation_degrees")
tracks/11/interp = 2
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -1.31383, -3.73574 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Sprite/RightUpperLeg/MiddleSegment:position")
tracks/12/interp = 2
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 12, 3 ), Vector2( 12.024, 3.0112 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Sprite/RightUpperLeg/MiddleSegment:rotation_degrees")
tracks/13/interp = 2
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -40.1053, 7.94086 ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Sprite/RightUpperLeg:position")
tracks/14/interp = 2
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 12, -12 ), Vector2( 12, -12 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Sprite/RightUpperLeg:rotation_degrees")
tracks/15/interp = 2
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 21.8014, -15.3052 ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("Sprite/LeftLowerLeg/MiddleSegment/EndSegment:position")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -6, 10 ), Vector2( -6, 10 ) ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("Sprite/LeftLowerLeg/MiddleSegment/EndSegment:rotation_degrees")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 36.6593 ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("Sprite/LeftLowerLeg/MiddleSegment:position")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -12, 3 ), Vector2( -12, 3 ) ]
}
tracks/19/type = "value"
tracks/19/path = NodePath("Sprite/LeftLowerLeg/MiddleSegment:rotation_degrees")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 13.6806, -63.0511 ]
}
tracks/20/type = "value"
tracks/20/path = NodePath("Sprite/LeftLowerLeg:position")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -9, 0 ), Vector2( -9, 0 ) ]
}
tracks/21/type = "value"
tracks/21/path = NodePath("Sprite/LeftLowerLeg:rotation_degrees")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -25.6394, 14.433 ]
}
tracks/22/type = "value"
tracks/22/path = NodePath("Sprite/RightLowerLeg/MiddleSegment/EndSegment:position")
tracks/22/interp = 1
tracks/22/loop_wrap = true
tracks/22/imported = false
tracks/22/enabled = true
tracks/22/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 6, 10 ), Vector2( 6, 10 ) ]
}
tracks/23/type = "value"
tracks/23/path = NodePath("Sprite/RightLowerLeg/MiddleSegment/EndSegment:rotation_degrees")
tracks/23/interp = 1
tracks/23/loop_wrap = true
tracks/23/imported = false
tracks/23/enabled = true
tracks/23/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -33.0132 ]
}
tracks/24/type = "value"
tracks/24/path = NodePath("Sprite/RightLowerLeg/MiddleSegment:position")
tracks/24/interp = 2
tracks/24/loop_wrap = true
tracks/24/imported = false
tracks/24/enabled = true
tracks/24/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 12.0266, 3.01448 ), Vector2( 12.0266, 3.01448 ) ]
}
tracks/25/type = "value"
tracks/25/path = NodePath("Sprite/RightLowerLeg/MiddleSegment:rotation_degrees")
tracks/25/interp = 2
tracks/25/loop_wrap = true
tracks/25/imported = false
tracks/25/enabled = true
tracks/25/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -10.7002, 67.2479 ]
}
tracks/26/type = "value"
tracks/26/path = NodePath("Sprite/RightLowerLeg:position")
tracks/26/interp = 2
tracks/26/loop_wrap = true
tracks/26/imported = false
tracks/26/enabled = true
tracks/26/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 9, 0 ), Vector2( 9, 0 ) ]
}
tracks/27/type = "value"
tracks/27/path = NodePath("Sprite/RightLowerLeg:rotation_degrees")
tracks/27/interp = 2
tracks/27/loop_wrap = true
tracks/27/imported = false
tracks/27/enabled = true
tracks/27/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 20.4146, -19.317 ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 16.0

[sub_resource type="RayShape2D" id=4]
length = 16.0

[node name="BossEnemy" instance=ExtResource( 1 )]
script = ExtResource( 8 )
MAX_SPEED = 50

[node name="Sprite" parent="." index="0"]
position = Vector2( 0, 0.777778 )
texture = ExtResource( 3 )

[node name="HeadSprite" type="Sprite" parent="Sprite" index="0"]
position = Vector2( 0, -7.88889 )
texture = ExtResource( 5 )

[node name="LeftWingSprite" type="Sprite" parent="Sprite" index="1"]
show_behind_parent = true
position = Vector2( -10, -18 )
rotation = 0.785398
texture = ExtResource( 2 )
offset = Vector2( -21, -5 )

[node name="RightWingSprite" type="Sprite" parent="Sprite" index="2"]
show_behind_parent = true
position = Vector2( 10, -18 )
rotation = -0.785398
texture = ExtResource( 2 )
offset = Vector2( 21, -5 )
flip_h = true

[node name="LeftUpperLeg" type="Sprite" parent="Sprite" index="3"]
position = Vector2( -12, -12 )
rotation = -0.00670889
texture = ExtResource( 6 )
offset = Vector2( -4, 1 )
__meta__ = {
"_edit_ik_": true
}

[node name="MiddleSegment" type="Sprite" parent="Sprite/LeftUpperLeg" index="0"]
position = Vector2( -12, 3 )
rotation = -0.0123756
texture = ExtResource( 4 )
offset = Vector2( -2, 4 )
__meta__ = {
"_edit_bone_": true
}

[node name="EndSegment" type="Sprite" parent="Sprite/LeftUpperLeg/MiddleSegment" index="0"]
position = Vector2( -6, 10 )
rotation = 0.0190808
texture = ExtResource( 7 )
offset = Vector2( 1, 2 )
__meta__ = {
"_edit_bone_": true
}

[node name="EndPoint" type="Position2D" parent="Sprite/LeftUpperLeg/MiddleSegment/EndSegment" index="0"]
position = Vector2( 3, 5 )
__meta__ = {
"_edit_bone_": true
}

[node name="RightUpperLeg" type="Sprite" parent="Sprite" index="4"]
position = Vector2( 12, -12 )
rotation = 0.15254
texture = ExtResource( 6 )
offset = Vector2( 5, 1 )
flip_h = true
__meta__ = {
"_edit_ik_": true
}

[node name="MiddleSegment" type="Sprite" parent="Sprite/RightUpperLeg" index="0"]
position = Vector2( 12.0084, 3.00394 )
rotation = -0.404795
scale = Vector2( 1, 1.01765 )
texture = ExtResource( 4 )
offset = Vector2( 3, 4 )
flip_h = true
__meta__ = {
"_edit_bone_": true
}

[node name="EndSegment" type="Sprite" parent="Sprite/RightUpperLeg/MiddleSegment" index="0"]
position = Vector2( 6, 10 )
rotation = -0.0378098
texture = ExtResource( 7 )
offset = Vector2( -1, 2 )
flip_h = true
__meta__ = {
"_edit_bone_": true
}

[node name="EndPoint" type="Position2D" parent="Sprite/RightUpperLeg/MiddleSegment/EndSegment" index="0"]
position = Vector2( -3, 5 )
__meta__ = {
"_edit_bone_": true
}

[node name="LeftLowerLeg" type="Sprite" parent="Sprite" index="5"]
position = Vector2( -9, 0 )
rotation = -0.0278547
texture = ExtResource( 6 )
offset = Vector2( -4, 1 )
__meta__ = {
"_edit_ik_": true
}

[node name="MiddleSegment" type="Sprite" parent="Sprite/LeftLowerLeg" index="0"]
position = Vector2( -12, 3 )
rotation = -0.564761
texture = ExtResource( 4 )
offset = Vector2( -2, 4 )
__meta__ = {
"_edit_bone_": true
}

[node name="EndSegment" type="Sprite" parent="Sprite/LeftLowerLeg/MiddleSegment" index="0"]
position = Vector2( -6, 10 )
rotation = 0.383895
texture = ExtResource( 7 )
offset = Vector2( 1, 2 )
__meta__ = {
"_edit_bone_": true
}

[node name="EndPoint" type="Position2D" parent="Sprite/LeftLowerLeg/MiddleSegment/EndSegment" index="0"]
position = Vector2( 3, 5 )
__meta__ = {
"_edit_bone_": true
}

[node name="RightLowerLeg" type="Sprite" parent="Sprite" index="6"]
position = Vector2( 9, 0 )
rotation = -0.0930519
texture = ExtResource( 6 )
offset = Vector2( 5, 1 )
flip_h = true
__meta__ = {
"_edit_ik_": true
}

[node name="MiddleSegment" type="Sprite" parent="Sprite/RightLowerLeg" index="0"]
position = Vector2( 12.0266, 3.01448 )
rotation = 0.694819
scale = Vector2( 1, 1.02021 )
texture = ExtResource( 4 )
offset = Vector2( 3, 4 )
flip_h = true
__meta__ = {
"_edit_bone_": true
}

[node name="EndSegment" type="Sprite" parent="Sprite/RightLowerLeg/MiddleSegment" index="0"]
position = Vector2( 6, 10 )
rotation = -0.345713
texture = ExtResource( 7 )
offset = Vector2( -1, 2 )
flip_h = true
__meta__ = {
"_edit_bone_": true
}

[node name="EndPoint" type="Position2D" parent="Sprite/RightLowerLeg/MiddleSegment/EndSegment" index="0"]
position = Vector2( -3, 5 )
__meta__ = {
"_edit_bone_": true
}

[node name="AnimationPlayer" parent="." index="2"]
autoplay = "Fly"
anims/Base = SubResource( 2 )
anims/Fly = SubResource( 7 )

[node name="Collider" parent="Hurtbox" index="0"]
position = Vector2( 0, -7 )
shape = SubResource( 6 )

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 4 )

[node name="RightWallCheck" type="RayCast2D" parent="." index="6"]
enabled = true
cast_to = Vector2( 16, 0 )
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="LeftWallCheck" type="RayCast2D" parent="." index="7"]
enabled = true
cast_to = Vector2( -16, 0 )
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="." index="8"]
wait_time = 0.2
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Hurtbox"]

[editable path="Hitbox"]
